# kitty

./: .gitignore  BUILD  CHANGELOG.md  LICENSE.md  Makefile.am  README.md  WORKSPACE  configure.ac  deploy.sh  explorer.vim  kitty.in  release.bzl  test.sh
.github/workflows/: deployment.yml  tests.yml
autotools/: BUILD
imgs/: .~lock.kitty-emblem.odg#  kitty-emblem.odg
man/: BUILD  kitty.man
package/: BUILD
package/autotools/: BUILD
sh/: BUILD  kitty
tests/: BUILD  Kitty_Test.py  Test_Helper.py  test.sh
tests/data/: .hiddenMouse.txt  binaryMouse  firstMouse.txt
tests/data/.hiddenMousehole/: thirdMouse.txt
tests/data/mousehole/: secondMouse.txt
tests/py/: SystemTests.py  TestHelper.py  system_tests.py  test_helper.py
tests/sh/: InstallationTest.sh  LintBashCode.sh
vim/: BUILD  explorer.vim
